--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "knex": "^0.21.21",
     "mysql": "^2.18.1",
     "mysql2": "^2.3.0",
-    "nodemon": "^2.0.12"
+    "nodemon": "^2.0.12",
+    "yup": "^0.32.9",
+    "yup-locales": "^1.2.0"
   },
   "devDependencies": {},
   "scripts": {
